opam-version: "2.0"
maintainer: "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors: "Andreas Garnaes <andreas.garnaes@gmail.com>"
homepage: "https://github.com/andreas/irmin-fdb"
doc: "https://andreas.github.io/irmin-fdb/"
bug-reports: "https://github.com/andreas/irmin-fdb/issues"
dev-repo: "git+https://github.com/andreas/irmin-fdb.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "irmin"
  "irmin-chunk"
  "lwt"
  "fdb"
  "irmin-test" {with-test}
]

synopsis: "Irmin store backed by FoundationDB"
